--- a/website_example/index.html
+++ b/website_example/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-    <title>Cryptonote Mining Pool</title>
+    <title>XMR Mining Lottery</title>
 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -15,6 +15,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
@@ -306,7 +307,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand"><span id="coinName"></span> Mining Pool</a>
+            <a class="navbar-brand"><font color=FF8500><i class="fab fa-monero"></i></font> <span id="coinName"></span> Mining Lottery</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -324,7 +325,7 @@
                 </a></li>
 
                 <li><a class="hot_link" data-page="payments.html" href="#payments">
-                    <i class="fa fa-paper-plane-o"></i> Payments
+                    <i class="far fa-paper-plane"></i> Payments
                 </a></li>
 
                 <li><a class="hot_link" data-page="support.html" href="#support">
@@ -348,9 +349,9 @@
 
 <footer>
     <div class="text-muted">
-        Powered by <a target="_blank" href="//github.com/zone117x/node-cryptonote-pool"><i class="fa fa-github"></i> node-cryptonote-pool</a>
+        Powered by <a target="_blank" href="//github.com/zone117x/node-cryptonote-pool"><i class="fab fa-github"></i> node-cryptonote-pool</a>
         <span id="poolVersion"></span>
-        created by Matthew Little & open sourced under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
+        created by Matthew Little, Modified by William Wilson, & open sourced under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
     </div>
 </footer>
 
