--- a/website_example/pages/getting_started.html
+++ b/website_example/pages/getting_started.html
@@ -56,7 +56,7 @@
 <h4>Mining Ports</h4>
 <div id="miningPorts" class="row">
     <div class="stats">
-        <div><i class="fa fa-tachometer"></i> Port: <span class="miningPort"></span></div>
+        <div><i class="fas fa-tachometer-alt"></i> Port: <span class="miningPort"></span></div>
         <div><i class="fa fa-unlock-alt"></i> Starting Difficulty: <span class="miningPortDiff"></span></div>
         <div><i class="fa fa-question"></i> Description: <span class="miningPortDesc"></span></div>
     </div>
@@ -64,11 +64,27 @@
 
 <hr>
 
-<h3>For <i class="fa fa-windows"></i> Windows users new to mining</h3>
+<h3>For <i class="fab fa-windows"></i> Windows users new to mining</h3>
 <p class="getting_started_windows">
     You can <a class="btn btn-default btn-sm" target="_blank" id="easyminer_link"><i class="fa fa-download"></i> Download</a>
-    and run <a target="_blank" href="https://github.com/zone117x/cryptonote-easy-miner">cryptonote-easy-miner</a> <i class="fa fa-github"></i>
+    and run <a target="_blank" href="https://github.com/zone117x/cryptonote-easy-miner">cryptonote-easy-miner</a> <i class="fab fa-github"></i>
     which will automatically generate your wallet address and run CPUMiner with the proper parameters.
+</p>
+
+<hr>
+
+<h3><i class="fab fa-android"></i> Android Mining</h3>
+<p>
+    <ol>
+        <li>Install the Pickaxe App from the Google Play Store</li>
+        <li>Open the App and select "USE WALLET"</li>
+        <li>At the coin selection screen choose Monero</li>
+        <li>Click the settings option at the bottom of the app</li>
+        <li>Open the "Pool" drop down menu and select "Custom Pool"</li>
+        <li>Enter "xmr-mining-lottery.com:3333" as the Custom Pool URL and enter your Monero wallet address in the Username/Wallet field</li>
+        <li>Choose your desired number of threads, click back to the miner tab of the app, and press the play button</li>
+    </ol>
+    If done properly, your hashrate will be displayed in the app
 </p>
 
 <hr>
@@ -92,10 +108,36 @@
             <th><i class="fa fa-car"></i> Architecture</th>
             <th><i class="fa fa-download"></i> Downloads</th>
             <th><i class="fa fa-comments"></i> Discussion</th>
-            <th><i class="fa fa-file-code-o"></i> Source Code</th>
+            <th><i class="far fa-file-code"></i> Source Code</th>
         </tr>
         </thead>
         <tbody id="mining_apps">
+        <tr>
+            <td class="miningAppTitle">XMRig (Best for CPU only mining)</td>
+            <td>CPU</td>
+            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/65mt4n/xmrig_fastest_cpu_miner_for_monero_open_source/">Reddit</a></td>
+            <td><a target="_blank" href="https://bitcointalk.to/index.php?topic=2160033.0">BitcoinTalk</a></td>
+            <td><a target="_blank" href="https://github.com/xmrig/xmrig">Github</a></td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <span>Example:</span>
+                <code>xmrig --donate=1 -o <span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
+            </td>
+        </tr>
+        <tr>
+            <td class="miningAppTitle">XMR-Stak (Best for CPU and GPU combined mining)</td>
+            <td>CPU</td>
+            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/5j973c/xmrstak_proudly_xmronly_mining_network_stack_and/">Reddit</a></td>
+            <td><a target="_blank" href="https://bitcointalk.to/index.php?topic=2160033.0">BitcoinTalk</a></td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu">Github</a></td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <span>Example:</span>
+                <code>xmr-stak --currency monero -o <span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
+            </td>
+        </tr>
         <tr>
             <td class="miningAppTitle">CPUMiner (forked by LucasJones & Wolf)</td>
             <td>CPU</td>
@@ -114,7 +156,7 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://mega.co.nz/#F!UlkU0RyR!E8n4CFkqVu0WoOnsJnQkSg">MEGA</a></td>
             <td><a target="_blank" href="https://twitter.com/yvg1900">Twitter</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="far fa-frown"></i></td>
         </tr>
         <tr>
             <td colspan="5">
@@ -127,7 +169,7 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="far fa-frown"></i></td>
         </tr>
         <tr>
             <td colspan="5">
@@ -140,7 +182,7 @@
             <td>OpenCL (AMD)</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">Discussion</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="far fa-frown"></i></td>
         </tr>
         <tr>
             <td colspan="5">
