--- a/website_example/pages/pool_blocks.html
+++ b/website_example/pages/pool_blocks.html
@@ -38,8 +38,8 @@
             <th title="How many more blocks network must mine before this block is matured"><i class="fa fa-link"></i> Maturity</th>
             <th><i class="fa fa-unlock-alt"></i> Difficulty</th>
             <th><i class="fa fa-paw"></i> Block Hash</th>
-            <th><i class="fa fa-clock-o"></i> Time Found</th>
-            <th><i class="fa fa-star-half-o"></i> Luck</th>
+            <th><i class="fas fa-clock"></i> Time Found</th>
+            <th><i class="far fa-star-half"></i> Luck</th>
         </tr>
         </thead>
         <tbody id="blocks_rows">
